--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,47 @@
-#calculator {
-
-}
-
-#title {
-
+table, td {
+    border: 2px solid black;    
 }
 
 #screen {
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 35px;
+    width: 200px;
+    text-align: center;
+}
+
+td {
+    width: 20px;
+    padding: 10px;
+}
+
+body {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#calculator {
+    border: 9px ridge #736d7a;
+    border-radius: 15%;
+    display: inline-block;
+    min-width: 300px;
+    max-width: 1200px;
+    min-height: 450px;
+
+}
+
+thead {
+    display: inline-block;
+    font-size: x-large;
+    margin-top: 15px;
+    border: 4px solid black;
+    padding: 5px;
 
 }
 
 #buttons {
-    
+    display: inline-block;
+    font-size: x-large;
+    margin-top: 20px;
 }
