--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@ table, td {
     margin-top: 20px;
     margin-bottom: 10px;
     margin-left: 35px;
+    height: 25px;
     width: 200px;
     text-align: center;
 }
