--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,3 @@
-table, td {
-    border: 2px solid black;    
-}
-
-#screen {
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 35px;
-    height: 25px;
-    width: 200px;
-    text-align: center;
-}
-
-td {
-    width: 20px;
-    padding: 10px;
-}
-
 body {
     text-align: center;
     margin-top: 20px;
@@ -24,25 +5,35 @@ body {
 
 #calculator {
     border: 9px ridge #736d7a;
-    border-radius: 15%;
+    border-radius: 5%;
     display: inline-block;
     min-width: 300px;
     max-width: 1200px;
     min-height: 450px;
-
 }
 
-thead {
-    display: inline-block;
-    font-size: x-large;
-    margin-top: 15px;
-    border: 4px solid black;
-    padding: 5px;
+#title {
+    font-size: large
+}
 
+#screen {;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 3%;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #buttons {
-    display: inline-block;
-    font-size: x-large;
     margin-top: 20px;
+}
+
+.button-clear{
+    width: 200px;
+}
+
+button {
+    font-size: 40px;
+    width: 50px;
+    margin: 5px;
 }
