Add raw first draft - one function

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,16 +16,17 @@ body {
     font-size: large
 }
 
-#screen {;
+#display {;
     text-align: center;
     border-radius: 3%;
     margin-left: 20px;
     margin-right: 20px;
 }
 
-input{
-    height: 20px;
+p {
+    height: 30px;
     width: 250px;
+    border: 2px solid grey;
 }
 
 #buttons {
